Revision to David part

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <aside class="notes">
                         <ul>
-                            <li>So we're going to start by covering the 2 points which acted as the precursor for us as a team and our use of polymer to deliver projects.</li>
+                            <li>So we're going to start by covering a couple points which acted as the precursor for us as a team and our use of polymer to deliver projects.</li>
                             <li>Hopefully this way you’ll get a sense of the environment we built as well as the technical approach.</li>
                         </ul>
                     </aside>
@@ -73,11 +73,12 @@
 
                 <!-- Collaboration -->
                 <section>
-                    <h1>1. collaboration</h1>
+                    <h1>collaboration</h1>
                     <aside class="notes">
                         <ul>
                             <li>A couple of years ago Net-A-Porter made its move to form cross-compentency teams.</li>
-                            <li>Teams made of design / product owner / engineers and testers. Creating small, focused product teams.</li>
+                            <li>Creating small, focused product teams</li>
+                            <li>Teams made of a product owner / engineers / testers and experience designers.</li>
                         </ul>
                     </aside>
                 </section>
@@ -88,27 +89,31 @@
                     <h1>empathy</h1>
                     <aside class="notes">
                         <ul>
-                            <li>There’s a lot of writings about the benefits of multi functional teams, and this isn’t anything new so we won’t go on about it.</li>
-                            <li> But the key for us as a team was this new ability to listen and learn - making us able to pivot and accelerate through change.</li>
-                            <li>Maturing our inter team processes over time has gave us the platform to;</li>
-                            <li>Constant conversation through to live</li>
-                            <li>Remove any Hand-offs and bring development forwards into design - making smarter decisions</li>
-                            <li>Remove any Hand-offs and bring development forwards into design - making smarter decisions</li>
-                            <li>Understand the pain points</li>
-                            <li>Move forwards together</li>
+                            <li>This has built empathy within our teams</li>
+                            <li>Establishing and growing a culture of listening and learning</li>
+                            <li>Maturing this has made us able to pivot and accelerate through change by making smarter decisions</li>
                         </ul>
                     </aside>
                 </section>
 
                 <!-- Challenge -->
                 <section>
-                    <h1>challenge</h1>
+                    <h1>challenging</h1>
                     <aside class="notes">
                         <ul>
-                            <li>As a team our thinking became more matured and as such the team led by the designers started to challenge the design approach used at NAP.</li>
-                            <li> What was once a process driven by showcasing full formed pages designs at the end of two week sprints - seemed increasingly outdated, and began to derail our agility.</li>
+                            <li>Collaboration and conversation is a natural catalyst to challenging perceptions</li>
+                            <li>For us as a team we started to challenge the way we approached design showcases of work to our stakeholders</li>
+                            <li>Previously this process was to showcase full formed pages designs at the end of two week sprints, which tended resulted in</li>
+                            <li>+ constant rework</li>
+                            <li>+ subjective commentary</li>
+                            <li>and ultimately began to derail our teams ability to deliver projects.</li>
                         </ul>
                     </aside>
+                </section>
+
+                <!-- Two Talks -->
+                <section>
+                    <h1>two talks</h1>
                 </section>
 
                 <!-- Influencers -->
@@ -125,7 +130,21 @@
                     </div>
                     <aside class="notes">
                         <ul>
-                            <li>A talk by Jeremy Keith from Clearleft followed by one by Samantha Warren when she was at Twitter, accelerated our conceptual thinking and experience approach. and brought us to idea of Styletil.es showcasing elements in granularity</li>
+                            <li>Two talks, one by Jeremy Keith from ‘Clearleft' and one by Samantha Warren (when she was at Twitter)</li>
+                            <li>accelerated our teams thinking about how to find a solution to this problem</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <!-- Stylesheet -->
+                <section data-background="#e80042">
+                    <div>
+                        <img src="/images/insight/stylesheet-01.jpg" class="shadow">
+                    </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>we decided to start talking and showcasing elements in granularity and much earlier</li>
+                            <li>a visual stylesheet for our stakeholders</li>
                         </ul>
                     </aside>
                 </section>
@@ -137,13 +156,16 @@
                     </div>
                     <aside class="notes">
                         <ul>
-                            <li>We developed that into a concept that would work with our company, showcasing early with granular elements and working against design hypothesis created in collaboration with our stakeholders Phraseology coined by Brad Frost - 'Atomic design', rapidly changed the lexicon around design at NAP.</li>
+                            <li>That in parallel with this phraseology coined by Brad Frost, removed the subjectivity from these stakeholder showcases.</li>
+                            <li>we were using the correct lexicon around structuring work</li>
+                            <li>but this hadn’t manifested into working reality yet.</li>
+                            <li>But don’t worry… there is a reason we’re all here… Matt</li>
                         </ul>
                     </aside>
                 </section>
 
                 <!-- Learn -->
-                <section>
+                <!-- <section>
                     <h1>learn</h1>
                     <aside class="notes">
                         <ul>
@@ -151,10 +173,10 @@
                             <li>Primarily because there was huge maintain overheads, poor communication and high time investment to implement styles across the whole app.</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- Review -->
-                <section>
+                <!-- <section>
                     <h1>review</h1>
                     <aside class="notes">
                         <ul>
@@ -163,20 +185,20 @@
                             <li>We had to identity an opportunity to collaborate and deliver working components libraries at the same time.</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- Identify the opportunity -->
-                <section>
+                <!-- <section>
                     <h1>2. opportunity</h1>
                     <aside class="notes">
                         <ul>
                             <li>Our opportunity to deliver came when a piece of internal research highlighted a potential missed opportunity. Driven by the conscious realisation that our key competitors were beginning to deliver faster, scalable sites</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- Fixed Width site -->
-                <section data-background="#e80042">
+                <!-- <section data-background="#e80042">
                     <div>
                         <img src="/images/opportunity/condensed-container-01.jpg" >
                     </div>
@@ -185,10 +207,10 @@
                             <li>We had a fixed container width at 950px and a separate mobile UI and rarely releasing features across both.</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- Browser Width -->
-                <section data-background="#e80042">
+                <!-- <section data-background="#e80042">
                     <div>
                         <img src="/images/opportunity/condensed-container-02.jpg" >
                     </div>
@@ -197,10 +219,10 @@
                             <li>Through data we saw that our consistently most profitable browser width was 1300-1400. This Paralleled with the trending change in traffic entry points from our visitors, and big growth in the APAC region from mobile devices.</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- The Question -->
-                <section>
+                <!-- <section>
                     <h1>question</h1>
                     <aside class="notes">
                         <ul>
@@ -213,7 +235,7 @@
                             <li>We started our responsive journey with our global header and footer - deciding to create a responsive site framework first before focusing on our content pages.</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
                 <!-- DAVID END -->
 
