chrome dev summit vids

--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,14 @@ this.removeAttribute('unresolved');
                 </section>
 
                 <section>
+                    <p>Chrome dev summit</p>
+                    <ul>
+                    <li><a href="https://www.youtube.com/watch?v=lck68wyVUo4">Polymer - State of the Union</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=g7f1Az5fxgU">Building Progressive Web Apps with Polymer</a></li>
+                    <ul>
+                </section>
+
+                <section>
                     <p>Useful links</p>
                     <ul>
                     <li><a href="https://www.polymer-project.org/1.0/docs/devguide/feature-overview.html">Polymer docs</a></li>
@@ -1223,8 +1231,7 @@ this.removeAttribute('unresolved');
 					<li><a href="http://webcomponents.org/">webcomponents.org</a></li>
                     <ul>
                 </section>
-
-                <section>
+wfuhat the fuck?      <section>
                     <p>Twitter</p>
                     <ul>
                     <li><a href="https://twitter.com/polymer">@polymer</a></li>
