--- a/index.html
+++ b/index.html
@@ -500,7 +500,8 @@
 					</code></pre>
 					<aside class="notes">
 						<ul>
-							<li> Form library - uses form behaviour
+							<li> Form library - uses form behaviour</li>
+							<li> Country dropdown - ajax, centralised country data.</li>
 						</ul>
 					</aside>
 				</section>
@@ -1045,11 +1046,6 @@ function checkForWebComponentsOnPage() {
                         </ul>
                     </aside>
                 </section>
-
-                <section>
-                    <h1>4. Async testing</h1>
-                </section>
-
 
                 <!-- MATT END -->
 
