cleaning up slides

--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@ function checkForWebComponentsOnPage() {
                     </aside> 
                 </section>
 
-
+            <!-- What's next -->
               <section>
                     <p>skeleton CSS / unresolved styles</p>
                     <aside class="notes">
@@ -1106,6 +1106,20 @@ function checkForWebComponentsOnPage() {
                             <li>styles before webcomponent is ready</li>
                         </ul>
                     </aside>           
+                </section>
+
+                <!-- What's next -->
+                <section>
+                    <p>progressive enhancement</p>
+                    <img src="/images/next/paul-lewis-polyer-loading.png" class="shadow" />
+                    <aside class="notes">
+                        <ul>
+                            <li>paul lewis slide from chrom dev summit - yesterday (18/11/15)</li>
+                            <li>bootstrap</li>
+                            <li>async components</li>
+                            <li>html import only loaded once so it's a race to get polymer</li>
+                        </ul>
+                    </aside> 
                 </section>
 
 
