--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     </div>
                     <aside class="notes">
                         <ul>
-                            <li>So we're going to start by covering a couple points which acted as the precursor for us as a team and our use of polymer to deliver projects.</li>
-                            <li>Hopefully this way you’ll get a sense of the environment we built as well as the technical approach.</li>
+                            <li>Just going to give a short foreward</li>
+                            <li>for us at NAP the precursor to working with polymer is creating a culture of component level thinking</li>
                         </ul>
                     </aside>
                 </section>
@@ -76,9 +76,9 @@
                     <h1>collaboration</h1>
                     <aside class="notes">
                         <ul>
-                            <li>A couple of years ago Net-A-Porter made its move to form cross-compentency teams.</li>
+                            <li>At NAP this started with a move to form cross-compentency teams</li>
                             <li>Creating small, focused product teams</li>
-                            <li>Teams made of a product owner / engineers / testers and experience designers.</li>
+                            <li>Teams made of a product owner / engineers / testers and experience designers</li>
                         </ul>
                     </aside>
                 </section>
@@ -89,9 +89,10 @@
                     <h1>empathy</h1>
                     <aside class="notes">
                         <ul>
-                            <li>This has built empathy within our teams</li>
-                            <li>Establishing and growing a culture of listening and learning</li>
-                            <li>Maturing this has made us able to pivot and accelerate through change by making smarter decisions</li>
+                            <li>For me this is one of the most crucial points</li>
+                            <li>As it builds empathy between team members</li>
+                            <li>And as that empathy Establishes itself it grows a culture of listening and learning within the team - self development if you will</li>
+                            <li>Making our teams able to pivot and accelerate through change by making smarter decisions</li>
                         </ul>
                     </aside>
                 </section>
@@ -101,23 +102,24 @@
                     <h1>challenging</h1>
                     <aside class="notes">
                         <ul>
-                            <li>Collaboration and conversation is a natural catalyst to challenging perceptions</li>
-                            <li>For us as a team we started to challenge the way we approached design showcases of work to our stakeholders</li>
-                            <li>Previously this process was to showcase full formed pages designs at the end of two week sprints, which tended resulted in</li>
-                            <li>+ constant rework</li>
-                            <li>+ subjective commentary</li>
-                            <li>and ultimately began to derail our teams ability to deliver projects.</li>
+                            <li>These smaller teams also promote self-development through conversation</li>
+                            <li>and that is a natural catalyst to challenging existing models</li>
+                            <li>For our team we started to challenge the way we approached showcasing work to our stakeholders</li>
+                            <li>Previously this process was to show full formed pages designs at the end of two week sprints, which tended resulted in</li>
+                            <li>+ subjective commentary + constant rework which was boring and promoted inconsistancy throughout</li>
+                            <li>how many times do you want to design and develop a form field</li>
+                            <li>ultimately began to derail our ability to deliver projects.</li>
                         </ul>
                     </aside>
                 </section>
 
                 <!-- Two Talks -->
-                <section>
+                <!-- <section>
                     <h1>two talks</h1>
-                </section>
+                </section> -->
 
                 <!-- Influencers -->
-                <section class="profile" data-background="#e80042">
+                <!-- <section class="profile" data-background="#e80042">
                     <div class="mugshot">
                         <img src="/images/insight/jeremy.png">
                         <h3>Jermery Keith</h3>
@@ -134,17 +136,15 @@
                             <li>accelerated our teams thinking about how to find a solution to this problem</li>
                         </ul>
                     </aside>
-                </section>
+                </section> -->
 
-                <!-- Stylesheet -->
-                <section data-background="#e80042">
-                    <div>
-                        <img src="/images/insight/stylesheet-01.jpg" class="shadow">
-                    </div>
+                <section>
+                    <h1>atomic</h1>
                     <aside class="notes">
                         <ul>
-                            <li>we decided to start talking and showcasing elements in granularity and much earlier</li>
-                            <li>a visual stylesheet for our stakeholders</li>
+                            <li>to move away from this we focused on taking a step back</li>
+                            <li>and began showcasing elements at a much more granular level</li>
+                            <li>using a methodolgy from the Brad Frost school of design</li>
                         </ul>
                     </aside>
                 </section>
@@ -156,13 +156,28 @@
                     </div>
                     <aside class="notes">
                         <ul>
-                            <li>That in parallel with this phraseology coined by Brad Frost, removed the subjectivity from these stakeholder showcases.</li>
-                            <li>we were using the correct lexicon around structuring work</li>
-                            <li>but this hadn’t manifested into working reality yet.</li>
-                            <li>But don’t worry… there is a reason we’re all here… Matt</li>
+                            <li>Atom - an element that can't be broken down anymore - H1</li>
+                            <li>Molecules - a collection of atoms - language select</li>
+                            <li>Organism - a collection of molecules - global header</li>
                         </ul>
                     </aside>
                 </section>
+
+                <!-- Stylesheet -->
+                <section data-background="#e80042">
+                    <div>
+                        <img src="/images/insight/stylesheet-01.jpg" class="shadow">
+                    </div>
+                    <aside class="notes">
+                        <ul>
+                            <li>Our showcase materials loo like this now - a visual stylesheet</li>
+                            <li>An incredible useful way of approaching our design</li>
+                            <li>it meant the team, and all stakeholders are invested to thinking about elements at an individual component level.</li>
+                        </ul>
+                    </aside>
+                </section>
+
+
 
                 <!-- Learn -->
                 <!-- <section>
