--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <ul>
                             <li>Our showcase materials loo like this now - a visual stylesheet</li>
                             <li>An incredible useful way of approaching our design</li>
-                            <li>it meant the team, and all stakeholders are invested to thinking about elements at an individual component level.</li>
+                            <li>it meant the team, and all stakeholders are invested to thinking abouts elements at an individual component level.</li>
                         </ul>
                     </aside>
                 </section>
@@ -1124,9 +1124,9 @@ function checkForWebComponentsOnPage() {
                 </section>
 
                 <!-- What's next -->
-                <section>
-                    <p>progressive enhancement</p>
+                <section data-background="#e80042">
                     <img src="/images/next/paul-lewis-polyer-loading.png" class="shadow" />
+                    <p>progressive enhancement</p>
                     <aside class="notes">
                         <ul>
                             <li>paul lewis slide from chrom dev summit - yesterday (18/11/15)</li>
@@ -1158,29 +1158,28 @@ function checkForWebComponentsOnPage() {
 
                 <section>
                     <p>Chrome dev summit</p>
-                    <ul>
-                    <li><a href="https://www.youtube.com/watch?v=lck68wyVUo4">Polymer - State of the Union</a></li>
+                    <ul class="list">
+                    <li><a href="https://www.youtube.com/watch?v=lck68wyVUo4">Polymer - State of the Union</a></li></br>
                     <li><a href="https://www.youtube.com/watch?v=g7f1Az5fxgU">Building Progressive Web Apps with Polymer</a></li>
                     <ul>
                 </section>
 
                 <section>
-                    <p>Useful links</p>
-                    <ul>
-                    <li><a href="https://www.polymer-project.org/1.0/docs/devguide/feature-overview.html">Polymer docs</a></li>
-                    <li><a href="https://elements.polymer-project.org/">Elements catalog</a></li>
-                    <li><a href="https://polymer.slack.com/">Slack</a></li>
-                    </br>
-					<li><a href="https://www.youtube.com/watch?v=m1hFhDYDY6o&olst=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN">Polycasts YouTube</a></li>
-					<li><a href="http://webcomponents.org/">webcomponents.org</a></li>
+                <p>Useful links</p>
+                    <ul class="list">
+                        <li><a href="https://www.polymer-project.org/1.0/docs/devguide/feature-overview.html">Polymer docs</a></li></br>
+                        <li><a href="https://elements.polymer-project.org/">Elements catalog</a></li></br>
+                        <li><a href="https://polymer.slack.com/">Slack</a></li></br>
+    					<li><a href="https://www.youtube.com/watch?v=m1hFhDYDY6o&olst=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN">Polycasts YouTube</a></li></br>
+    					<li><a href="http://webcomponents.org/">webcomponents.org</a></li></br>
                     <ul>
                 </section>
                 <section>
                     <p>Twitter</p>
-                    <ul>
-                    <li><a href="https://twitter.com/polymer">@polymer</a></li>
-                    <li><a href="https://twitter.com/ebidel">@ebidel</a></li>
-                    <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a></li>
+                    <ul class="list">
+                    <li><a href="https://twitter.com/polymer">@polymer</a></li></br>
+                    <li><a href="https://twitter.com/ebidel">@ebidel</a></li></br>
+                    <li><a href="https://twitter.com/rob_dodson">@rob_dodson</a></li></br>
                     <li><a href="https://twitter.com/TaylorTheSavage">@TaylorTheSavage</a></li>
                     </ul>
                 </section> 
@@ -1195,7 +1194,7 @@ function checkForWebComponentsOnPage() {
                 </section>
 
                 <section data-background="#e80042">
-                    <video controls style="width:42%" class="shadow">
+                    <video controls style="width:100%" class="shadow">
                       <source src="/videos/demo/demo-from-dev-summit.mp4" type="video/mp4">
                     </video>
                     <aside class="notes">
