added robins image

--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ describe('&lt;nap-wishlist-button&gt;', function () {
                 </section>
 
                 <section data-background="#eeeeee">
-                    <img height="600" src="/images/components-demo/product-shadow-dom.png">
+                    <img height="600" src="/images/structured-data/product-shadow-dom.jpg">
                     <aside class="notes">
                         <ul>
                             <li>this is nap product, seen earlier</li>
