rupert dicking around

--- a/index.html
+++ b/index.html
@@ -1124,9 +1124,12 @@ function checkForWebComponentsOnPage() {
                 </section>
 
                 <!-- What's next -->
+                <section>
+                    <p>progressive enhancement</p>
+                </section>
+
                 <section data-background="#e80042">
                     <img src="/images/next/paul-lewis-polyer-loading.png" class="shadow" />
-                    <p>progressive enhancement</p>
                     <aside class="notes">
                         <ul>
                             <li>paul lewis slide from chrom dev summit - yesterday (18/11/15)</li>
@@ -1141,7 +1144,7 @@ function checkForWebComponentsOnPage() {
 
                 <!-- What's next -->
                 <section>
-                    <p>Expanding outside of the product page</p>
+                    <p>expanding outside of the product page</p>
                     <aside class="notes">
                         <ul>
                             <li>NAP live homepage</li>
@@ -1157,7 +1160,7 @@ function checkForWebComponentsOnPage() {
                 </section>
 
                 <section>
-                    <p>Chrome dev summit</p>
+                    <p>chrome dev summit</p>
                     <ul class="list">
                     <li><a href="https://www.youtube.com/watch?v=lck68wyVUo4">Polymer - State of the Union</a></li></br>
                     <li><a href="https://www.youtube.com/watch?v=g7f1Az5fxgU">Building Progressive Web Apps with Polymer</a></li>
@@ -1165,7 +1168,7 @@ function checkForWebComponentsOnPage() {
                 </section>
 
                 <section>
-                <p>Useful links</p>
+                <p>useful links</p>
                     <ul class="list">
                         <li><a href="https://www.polymer-project.org/1.0/docs/devguide/feature-overview.html">Polymer docs</a></li></br>
                         <li><a href="https://elements.polymer-project.org/">Elements catalog</a></li></br>
@@ -1175,7 +1178,7 @@ function checkForWebComponentsOnPage() {
                     <ul>
                 </section>
                 <section>
-                    <p>Twitter</p>
+                    <p>twitter</p>
                     <ul class="list">
                     <li><a href="https://twitter.com/polymer">@polymer</a></li></br>
                     <li><a href="https://twitter.com/ebidel">@ebidel</a></li></br>
@@ -1193,7 +1196,7 @@ function checkForWebComponentsOnPage() {
                     <h1>let's see it</h1>
                 </section>
 
-                <section data-background="#e80042">
+                <!-- <section data-background="#e80042">
                     <video controls style="width:100%" class="shadow">
                       <source src="/videos/demo/demo-from-dev-summit.mp4" type="video/mp4">
                     </video>
@@ -1205,7 +1208,7 @@ function checkForWebComponentsOnPage() {
                             <li>if you want us to show you come see us after</li>
                         </ul>
                     </aside>                       
-                </section>
+                </section> -->
 
                 <section>
                     <h1>questions...</h1>
